logs/data-writers.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/data_writers-0.5.3.egg-info'...
Listing './lib/python3.5/site-packages/datawriters'...
Compiling './lib/python3.5/site-packages/datawriters/aerospikewriter.py'...
***   File "./lib/python3.5/site-packages/datawriters/aerospikewriter.py", line 8
    print 'missing host argument, using 127.0.0.1'
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/datawriters/csvwriter.py'...
***   File "./lib/python3.5/site-packages/datawriters/csvwriter.py", line 8
    print 'missing database argument, using data.csv'
                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/datawriters/datawriter.py'...
***   File "./lib/python3.5/site-packages/datawriters/datawriter.py", line 62
    print 'Data writen to '+self.write_name
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/datawriters/mongowriter.py'...
***   File "./lib/python3.5/site-packages/datawriters/mongowriter.py", line 8
    print 'missing host argument, using localhost'
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/datawriters/mysqlwriter.py'...
***   File "./lib/python3.5/site-packages/datawriters/mysqlwriter.py", line 8
    print 'missing database argument, using data'
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/datawriters/notimplementedwriter.py'...
***   File "./lib/python3.5/site-packages/datawriters/notimplementedwriter.py", line 5
    print self.write_name + " failed, did you install its requirements?"
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/datawriters/postgreswriter.py'...
***   File "./lib/python3.5/site-packages/datawriters/postgreswriter.py", line 8
    print 'missing host argument, using localhost'
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/datawriters/rediswriter.py'...
***   File "./lib/python3.5/site-packages/datawriters/rediswriter.py", line 8
    print 'missing host argument, using 127.0.0.1'
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/datawriters/sqlitewriter.py'...
***   File "./lib/python3.5/site-packages/datawriters/sqlitewriter.py", line 8
    print 'missing database argument, using data.sqlite'
                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
